<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/calendar">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".7"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar_textView"
            android:id="@+id/textView36"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="#ff6f6f"
            android:textSize="22sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".6"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="#ffffff"
            android:textSize="40dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".6"
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:layout_weight="1"
            android:textSize="35dp"
            android:layout_margin="2dp"
            android:background="@color/float_transparent"
            android:onClick="button_press"
            android:id="@+id/button20"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textSize="30dp"
            android:layout_weight="1"
            android:onClick="button_press"
            android:id="@+id/button22"
            android:layout_margin="2dp"
            android:background="@color/float_transparent"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:textSize="30dp"

            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="#000000"
            android:onClick="button_press"
            android:id="@+id/button21"
            android:background="@color/float_transparent"
            />

    </LinearLayout>
</LinearLayout>

</LinearLayout>
